--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pycursor-agent"
+name = "pycursor_agent"
 version = "0.1.0"
 description = "A Python SDK for programmatically calling Cursor's AI Agent."
 readme = "README.md"
